--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="animate.css">
 
     <!-- Note that the below Bootstrap file is a specific version. If you grab the most
     current from Bootstrap website, you will see the button grow transition being a lot faster
@@ -17,6 +18,7 @@
   </head>
   <body>
     <header class="startup text-center text-white d-flex">
+      <h1 class="animated infinite bounce">Animate Me</h1>
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-12 my-auto">
