--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <header class="startup text-center text-white d-flex">
-      <h1 class="animated infinite bounce">Animate Me</h1>
+      <!-- <h1 class="animated infinite bounce">Animate Me</h1> -->
       <div class="container my-auto">
         <div class="row">
           <div class="col-lg-12 my-auto">
