--- a/animate.html
+++ b/animate.html
@@ -18,6 +18,8 @@
 
       <br><br><br>
       <h2 class="animated infinite tada">Thank You!</h2>
+
+      <script type="text/javascript" src="keylessCar.js"></script>
   </body>
 
 </html>
