--- a/animate.html
+++ b/animate.html
@@ -16,7 +16,8 @@
 
       <br><br><br>
       <h2 class="animated infinite tada">Thank You!</h2>
-      <script type="text/javascript" src="keylessCar.js"></script>
+      <!-- <script type="text/javascript" src="keylessCar.js"></script> -->
+      <script type="text/javascript" src="Facebook.js"></script>
   </body>
 
 </html>
